@@ -82,8 +82,8 @@ EXTERN int        strncasecmp(FAR const char *, FAR const char *, size_t);
 EXTERN FAR char  *strcpy(char *dest, FAR const char *src);
 EXTERN FAR char  *strncpy(char *, FAR const char *, size_t);
 EXTERN FAR char  *strpbrk(FAR const char *, FAR const char *);
-EXTERN FAR char  *strchr(FAR const char *, int);
-EXTERN FAR char  *strrchr(FAR const char *, int);
+EXTERN FAR char  *strchr(FAR const char *s, int c);
+EXTERN FAR char  *strrchr(FAR const char *s, int c);
 EXTERN size_t     strspn(FAR const char *, FAR const char *);
 EXTERN size_t     strcspn(FAR const char *, FAR const char *);
 EXTERN FAR char  *strstr(FAR const char *, FAR const char *);
@@ -91,6 +91,7 @@ EXTERN FAR char  *strcasestr(FAR const char *, FAR const char *);
 EXTERN FAR char  *strtok(FAR char *, FAR const char *);
 EXTERN FAR char  *strtok_r(FAR char *, FAR const char *, FAR char **);
 
+EXTERN FAR void  *memchr(FAR const void *s, int c, size_t n);
 EXTERN FAR void  *memset(FAR void *s, int c, size_t n);
 EXTERN FAR void  *memcpy(FAR void *dest, FAR const void *src, size_t n);
 EXTERN int        memcmp(FAR const void *s1, FAR const void *s2, size_t n);
